# tool_serial_terminal_Rust

./: .gitignore  Cargo.toml  README.ko.md  README.md  build.rs
docs/: blog_en.md  blog_kr.md  demo.html
scripts/: build.ps1
src/: icon.rs  main.rs
